--- a/EDMS/web/WEB-INF/web.xml
+++ b/EDMS/web/WEB-INF/web.xml
@@ -78,7 +78,7 @@
         </session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>frontpage.jsp</welcome-file>
+        <welcome-file>login.jsp</welcome-file>
     </welcome-file-list>
     <filter>
         <filter-name>f1</filter-name>
