--- a/EDMS/web/WEB-INF/web.xml
+++ b/EDMS/web/WEB-INF/web.xml
@@ -1,76 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
     <servlet>
-        <servlet-name>StudentRegistration</servlet-name>
-        <servlet-class>com.KPSCampusCare.AccessingDao.StudentRegistration</servlet-class>
+        <servlet-name>UserRegistration</servlet-name>
+        <servlet-class>com.EDMS.AccessingDao.UserRegistration</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>LoginRequest</servlet-name>
-        <servlet-class>com.KPSCampusCare.AccessingDao.LoginRequest</servlet-class>
+        <servlet-class>com.EDMS.AccessingDao.LoginRequest</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>DisplayAssignment</servlet-name>
-        <servlet-class>com.KPSCampusCare.AccessingDao.DisplayAssignment</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>RetrieveStudRecord</servlet-name>
-        <servlet-class>com.KPSCampusCare.AccessingDao.RetrieveStudRecord</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>FetchStaffRemark</servlet-name>
-        <servlet-class>com.KPSCampusCare.AccessingDao.FetchStaffRemark</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>UpdateAssignment</servlet-name>
-        <servlet-class>com.KPSCampusCare.AccessingDao.UpdateAssignment</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>MarkAttendance</servlet-name>
-        <servlet-class>com.KPSCampusCare.AccessingDao.MarkAttendance</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>ParentRegistration</servlet-name>
-        <servlet-class>com.KPSCampusCare.AccessingDao.ParentRegistration</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>ProcessLeaveApproval</servlet-name>
-        <servlet-class>com.KPSCampusCare.AccessingDao.ProcessLeaveApproval</servlet-class>
+        <servlet-name>AdminRegistration</servlet-name>
+        <servlet-class>com.EDMS.AccessingDao.AdminRegistration</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>StudentRegistration</servlet-name>
-        <url-pattern>/StudentRegistration</url-pattern>
+        <servlet-name>UserRegistration</servlet-name>
+        <url-pattern>/UserRegistration</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>LoginRequest</servlet-name>
         <url-pattern>/LoginRequest</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>DisplayAssignment</servlet-name>
-        <url-pattern>/DisplayAssignment</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>RetrieveStudRecord</servlet-name>
-        <url-pattern>/RetrieveStudRecord</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>FetchStaffRemark</servlet-name>
-        <url-pattern>/FetchStaffRemark</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>UpdateAssignment</servlet-name>
-        <url-pattern>/UpdateAssignment</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>MarkAttendance</servlet-name>
-        <url-pattern>/MarkAttendance</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>ParentRegistration</servlet-name>
-        <url-pattern>/ParentRegistration</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>ProcessLeaveApproval</servlet-name>
-        <url-pattern>/ProcessLeaveApproval</url-pattern>
+        <servlet-name>AdminRegistration</servlet-name>
+        <url-pattern>/AdminRegistration</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
@@ -80,24 +32,4 @@
     <welcome-file-list>
         <welcome-file>login.jsp</welcome-file>
     </welcome-file-list>
-    <filter>
-        <filter-name>f1</filter-name>
-        <filter-class>com.KPSCampusCare.filters.LoginFilter</filter-class>
-    </filter>
-    <!--    <filter-mapping>
-        <filter-name>f1</filter-name>
-        <url-pattern>/student/home.jsp</url-pattern>
-    </filter-mapping>-->
-    <filter-mapping>
-        <filter-name>f1</filter-name>
-        <url-pattern>/staff/home.jsp</url-pattern>
-    </filter-mapping>
-    <filter-mapping>
-        <filter-name>f1</filter-name>
-        <url-pattern>/parents/home.jsp</url-pattern>
-    </filter-mapping>
-    <filter-mapping>
-        <filter-name>f1</filter-name>
-        <url-pattern>/admin/home.jsp</url-pattern>
-    </filter-mapping>
-</web-app>
+ </web-app>
