--- a/EDMS/web/WEB-INF/web.xml
+++ b/EDMS/web/WEB-INF/web.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
     <servlet>
+        <servlet-name>CreateDir</servlet-name>
+        <servlet-class>com.EDMS.AccessingDao.CreateDir</servlet-class>
+    </servlet>
+    <servlet>
         <servlet-name>UserRegistration</servlet-name>
         <servlet-class>com.EDMS.AccessingDao.UserRegistration</servlet-class>
     </servlet>
@@ -12,6 +16,10 @@
         <servlet-name>AdminRegistration</servlet-name>
         <servlet-class>com.EDMS.AccessingDao.AdminRegistration</servlet-class>
     </servlet>
+    <servlet-mapping>
+        <servlet-name>CreateDir</servlet-name>
+        <url-pattern>/CreateDir</url-pattern>
+    </servlet-mapping>
     <servlet-mapping>
         <servlet-name>UserRegistration</servlet-name>
         <url-pattern>/UserRegistration</url-pattern>
